[gd_scene load_steps=16 format=3 uid="uid://dtv2yb1ox26nc"]

[ext_resource type="Texture2D" uid="uid://crktu4p1wg27v" path="res://Burger Topper Assets/Burger Parts/BunBottom.png" id="1_2jjys"]
[ext_resource type="Script" path="res://game.gd" id="1_gjcom"]
[ext_resource type="PackedScene" uid="uid://bd3ib3xwdyxp4" path="res://food_1.tscn" id="2_i2vkb"]
[ext_resource type="Texture2D" uid="uid://dktjye4njgnd7" path="res://Burger Topper Assets/TravisJump/travisjump1.png" id="2_vqsof"]
[ext_resource type="Texture2D" uid="uid://diobfx3j5tugk" path="res://Burger Topper Assets/TravisJump/travisjump2.png" id="3_10gjm"]
[ext_resource type="PackedScene" uid="uid://bl1vdc0nvqlry" path="res://food_2.tscn" id="3_s0cin"]
[ext_resource type="Texture2D" uid="uid://datbc680j2tru" path="res://Burger Topper Assets/TravisJump/travisjump3.png" id="4_crhqr"]
[ext_resource type="Texture2D" uid="uid://cbxjlaooggqo" path="res://Burger Topper Assets/TravisJump/travisjump4.png" id="5_aapjc"]
[ext_resource type="Texture2D" uid="uid://dtcvnjl8rfg6o" path="res://Burger Topper Assets/TravisJump/travisjump5.png" id="6_g1sgu"]
[ext_resource type="Texture2D" uid="uid://cofx34mlqt7hu" path="res://Burger Topper Assets/TravisJump/travisjump6.png" id="7_tkmn3"]
[ext_resource type="Texture2D" uid="uid://dv62imsdmnyqq" path="res://Burger Topper Assets/TravisJump/travisjump7.png" id="8_vag45"]
[ext_resource type="Texture2D" uid="uid://rj6f48ownygk" path="res://Burger Topper Assets/TravisJump/travisjump8.png" id="9_pe7v7"]
[ext_resource type="Texture2D" uid="uid://csdwjeypyhf1e" path="res://Burger Topper Assets/TravisJump/travisjump9.png" id="10_7fj7k"]
[ext_resource type="Texture2D" uid="uid://clpv36ipvbuwt" path="res://Burger Topper Assets/TravisIdle.png" id="11_ay18u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0lgjs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vqsof")
}, {
"duration": 1.0,
"texture": ExtResource("3_10gjm")
}, {
"duration": 1.0,
"texture": ExtResource("4_crhqr")
}, {
"duration": 1.0,
"texture": ExtResource("5_aapjc")
}, {
"duration": 1.0,
"texture": ExtResource("6_g1sgu")
}, {
"duration": 1.0,
"texture": ExtResource("7_tkmn3")
}, {
"duration": 1.0,
"texture": ExtResource("8_vag45")
}, {
"duration": 1.0,
"texture": ExtResource("9_pe7v7")
}, {
"duration": 1.0,
"texture": ExtResource("10_7fj7k")
}],
"loop": true,
"name": &"celebrate",
"speed": 7.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ay18u")
}],
"loop": true,
"name": &"idle",
"speed": 7.5
}]

[node name="Game" type="Node2D"]
script = ExtResource("1_gjcom")
food_scenes = Array[PackedScene]([ExtResource("2_i2vkb"), ExtResource("3_s0cin")])

[node name="Travis" type="AnimatedSprite2D" parent="."]
position = Vector2(962, 331)
sprite_frames = SubResource("SpriteFrames_0lgjs")
animation = &"celebrate"

[node name="Button" type="Button" parent="."]
offset_left = 516.0
offset_top = 308.0
offset_right = 723.0
offset_bottom = 460.0
text = "Button
"

[node name="SpawnLocation" type="Marker2D" parent="."]
position = Vector2(250, 2.08165e-12)

[node name="BurgerBottom" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="BurgerBottom"]
position = Vector2(250, 550)
texture = ExtResource("1_2jjys")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BurgerBottom"]
position = Vector2(250, 550)
polygon = PackedVector2Array(-20, -62, 27, -64, 50, -62, 64, -63, 73, -61, 85, -61, 110, -60, 126, -59, 142, -57, 154, -54, 169, -50, 174, -45, 179, -30, 182, -21, 181, -7, 178, 1, 169, 17, 161, 24, 150, 31, 138, 38, 122, 44, 103, 51, 70, 57, 44, 60, 26, 62, 0, 63, -23, 62, -66, 59, -96, 54, -129, 43, -154, 30, -167, 15, -174, -3, -176, -16, -175, -25, -171, -33, -163, -43, -154, -47, -141, -50, -127, -54, -113, -56, -98, -58, -78, -59, -57, -62)

[node name="FoodContainer" type="Node2D" parent="."]

[node name="Spawn_button" type="Button" parent="."]
offset_left = 527.0
offset_top = 125.0
offset_right = 784.0
offset_bottom = 225.0
text = "Spawn"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="area_entered" from="BurgerBottom" to="." method="_on_burger_bottom_area_entered"]
[connection signal="area_exited" from="BurgerBottom" to="." method="_on_burger_bottom_area_exited"]
[connection signal="pressed" from="Spawn_button" to="." method="_on_spawn_button_pressed"]
